--- a/templates/login.html
+++ b/templates/login.html
@@ -102,6 +102,9 @@
     <h2>Вход в систему</h2>
     <input type="text" name="username" placeholder="Имя пользователя" required>
     <input type="password" name="password" placeholder="Пароль" required>
+    {% if error%}
+    <p style="margin-bottom: 10px;color: red;">{{error}}</p>
+    {%endif%}
     <button type="submit">Войти</button>
   </form>
 </body>
